--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Mike Fallon <tech.galavant@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 replit = "^2.0.0"
+icecream = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 
